Resolves fdo#59117 fixes missing border of last column

The table's layout should not change to RTL with the selection
of paragaraph left, right toolbar icons.  It should change the
 layout only when the document is in RTL.

Change-Id: I3c9a95169ea1581d44c176ec260a9cbf818913ab